# gitmove

./: .gitignore  .gitmove.toml  CHANGELOG.md  README.md  config.sh  dockerfile  gitmove-spec.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: gitmove-tests.yml  gitmove.yml
doc/: Documentation.md  guide.md  version_0_2_0.md  wiki.md
doc/ci-cd/: setup-ci-guide.md  test-summary.md
doc/testing/: advanced-mocking-examples.md  pytest-examples.md
src/gitmove/: __init__.py  cicd.py  cli.py  config-validator.py  config.py  config_validator.py  env_config.py  exceptions.py
src/gitmove/commands/: __init__.py  cicd_commands.py  config_commands.py  env_commands.py  env_config.py  error_handling.py  sync_commands.py
src/gitmove/core/: __init__.py  branch_manager.py  conflict_detector.py  strategy_advisor.py  sync_manager.py
src/gitmove/plugins/: __init__.py  manager.py
src/gitmove/ui/: __init__.py  autocomplete.py  components.py  error_handler.py
src/gitmove/utils/: __init__.py  git_commands.py  logger.py  recovery_manager.py
src/gitmove/validators/: __init__.py  config_validator.py  git_repo_validator.py
tests/: README.md  __init__.py  test_branch_manager.py  test_cli.py  test_config.py  test_config_validator.py  test_conflict_detector.py  test_env_config.py  test_git_commands.py  test_strategy_advisor.py  test_sync_manager.py  test_validators.py
tests/integration/: test_integration.py
