[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmove"
version = "0.1.0"
description = "Gestionnaire de branches Git intelligent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thearchit3ct", email = "thearchit3ct@outlook.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "gitpython>=3.1.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "toml>=0.10.0",
    "pyyaml>=5.1",
    "python-dotenv>=0.19.0",
    "cryptography>=3.4.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "pytest-cov>=4.0.0",
    "toml>=0.10.0",
    "rich>=10.0.0"
]
cicd = [
    "pyyaml>=5.1",
]

[project.scripts]
gitmove = "gitmove.cli:main"

[project.urls]
"Homepage" = "https://github.com/thearchit3ct/gitmove"
"Bug Tracker" = "https://github.com/thearchit3ct/gitmove/issues"
"Documentation" = "https://github.com/thearchit3ct/gitmove/wiki"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitmove", "gitmove.*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"